--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,8 +22,9 @@
         <div class="row">
 
             <div class="col-md-6 m-auto">
-                <span class="home icon"><a href="#">Home</a></span>
-                <h1 class="text-center display-4 my-4">Mongo File Uploads</h1>
+
+                <!-- <span class="home icon"><a href="#">Home</a></span> -->
+                <h3 class="text-center display-4 my-4">Mongo File <span class="home icon"><a href="#">Home</a></span>Uploads</h3>
                 
                 <form action="/upload" method="POST" enctype="multipart/form-data">
                     <div class="custom-file mb-3">
